// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar renders fixed 1`] = `
<nav
  className="nav--fixed kYUOWu"
  role="navigation"
  style={
    Object {
      "backgroundColor": null,
    }
  }
>
  <div
    className="fPuwav"
  >
    <button
      className="egAjOF"
      type="button"
    >
      <svg
        fill="currentcolor"
        height={20}
        viewBox="0 0 20 17"
        width={20}
      >
        <path
          d="M 0 0 H 20 V 3 H 0 z M 0 7 H 20 V 10 H 0 z M 0 14 H 20 V 17 H 0 z"
        />
      </svg>
    </button>
    Content
    <a
      className="iolQUC egAjOF"
      href="http://localhost/new/"
      rel={null}
      target="_self"
    >
      Logo
    </a>
    <div
      className="links links__row ffAPRB"
      role="menubar"
    >
      <span
        className="list-container list-container--closed"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="none"
      >
        <a
          className="link ceJHnv edbLbi"
          href="/"
          rel={null}
          role="link"
          target="_self"
        >
          Link 1
        </a>
      </span>
      <span
        className="list-container list-container--closed"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="none"
      >
        <button
          className="link ceJHnv edbLbi"
          href={null}
          role="button"
        >
          Link 2
        </button>
      </span>
      <span
        className="list-container list-container--closed"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="none"
      >
        <button
          className="link ceJHnv edbLbi"
          href={null}
          role="button"
        >
          Link 3
        </button>
      </span>
      <span
        className="list-container list-container--closed"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="none"
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="link link--has-other ceJHnv edbLbi"
          href={null}
          role="button"
        >
          Link 4
        </button>
        <div
          className="FBsWu links links__list iQcfWo"
          onItemClick={[Function]}
          role="menu"
          style={
            Object {
              "minWidth": "258px",
            }
          }
        >
          <div
            className="emXdXc"
          >
            <span
              className="list-container list-container--closed"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="none"
            >
              <button
                className="link ceJHnv edbLbi"
                href={null}
                role="button"
              >
                Link 5
              </button>
            </span>
            <span
              className="list-container list-container--closed"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="none"
            >
              <button
                className="link ceJHnv edbLbi"
                href={null}
                role="button"
              >
                Link 6
              </button>
            </span>
            <span
              className="list-container list-container--closed"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="none"
            >
              <button
                className="link ceJHnv edbLbi"
                href={null}
                role="button"
              >
                Link 7 With Really Long Content 
              </button>
            </span>
          </div>
        </div>
      </span>
    </div>
  </div>
</nav>
`;

exports[`NavBar renders inverted 1`] = `
<nav
  className="nav--relative nav--inverted kYUOWu"
  role="navigation"
  style={
    Object {
      "backgroundColor": null,
    }
  }
>
  <div
    className="fPuwav"
  >
    <button
      className="egAjOF"
      type="button"
    >
      <svg
        fill="currentcolor"
        height={20}
        viewBox="0 0 20 17"
        width={20}
      >
        <path
          d="M 0 0 H 20 V 3 H 0 z M 0 7 H 20 V 10 H 0 z M 0 14 H 20 V 17 H 0 z"
        />
      </svg>
    </button>
    <a
      className="iolQUC egAjOF"
      href="http://localhost/new/"
      rel={null}
      target="_self"
    >
      Logo
    </a>
    <div
      className="links links__row ffAPRB"
      role="menubar"
    >
      <span
        className="list-container list-container--closed"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="none"
      >
        <button
          className="link ceJHnv edbLbi"
          href={null}
          role="button"
        >
          Link 1
        </button>
      </span>
      <span
        className="list-container list-container--closed"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="none"
      >
        <button
          className="link ceJHnv edbLbi"
          href={null}
          role="button"
        >
          Link 2
        </button>
      </span>
      <span
        className="list-container list-container--closed"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="none"
      >
        <button
          className="link ceJHnv edbLbi"
          href={null}
          role="button"
        >
          Link 3
        </button>
      </span>
      <span
        className="list-container list-container--closed"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="none"
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="link link--has-other ceJHnv edbLbi"
          href={null}
          role="button"
        >
          Link 4
        </button>
        <div
          className="FBsWu links links__list iQcfWo"
          onItemClick={[Function]}
          role="menu"
          style={
            Object {
              "minWidth": "258px",
            }
          }
        >
          <div
            className="emXdXc"
          >
            <span
              className="list-container list-container--closed"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="none"
            >
              <button
                className="link ceJHnv edbLbi"
                href={null}
                role="button"
              >
                Link 5
              </button>
            </span>
            <span
              className="list-container list-container--closed"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="none"
            >
              <button
                className="link ceJHnv edbLbi"
                href={null}
                role="button"
              >
                Link 6
              </button>
            </span>
            <span
              className="list-container list-container--closed"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="none"
            >
              <button
                className="link ceJHnv edbLbi"
                href={null}
                role="button"
              >
                Link 7 With Really Long Content 
              </button>
            </span>
          </div>
        </div>
      </span>
    </div>
  </div>
</nav>
`;

exports[`NavBar renders with defaults 1`] = `
<nav
  className="nav--relative kYUOWu"
  role="navigation"
  style={
    Object {
      "backgroundColor": null,
    }
  }
>
  <div
    className="fPuwav"
  >
    <button
      className="egAjOF"
      type="button"
    >
      <svg
        fill="currentcolor"
        height={20}
        viewBox="0 0 20 17"
        width={20}
      >
        <path
          d="M 0 0 H 20 V 3 H 0 z M 0 7 H 20 V 10 H 0 z M 0 14 H 20 V 17 H 0 z"
        />
      </svg>
    </button>
    Content
    <div
      className="links links__row ffAPRB"
      role="menubar"
    >
      <span
        className="list-container list-container--closed"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="none"
      >
        <button
          className="link ceJHnv edbLbi"
          href={null}
          role="button"
        >
          Link 1
        </button>
      </span>
      <span
        className="list-container list-container--closed"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="none"
      >
        <button
          className="link ceJHnv edbLbi"
          href={null}
          role="button"
        >
          Link 2
        </button>
      </span>
      <span
        className="list-container list-container--closed"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="none"
      >
        <button
          className="link ceJHnv edbLbi"
          href={null}
          role="button"
        >
          Link 3
        </button>
      </span>
      <span
        className="list-container list-container--closed"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="none"
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="link link--has-other ceJHnv edbLbi"
          href={null}
          role="button"
        >
          Link 4
        </button>
        <div
          className="FBsWu links links__list iQcfWo"
          onItemClick={[Function]}
          role="menu"
          style={
            Object {
              "minWidth": "258px",
            }
          }
        >
          <div
            className="emXdXc"
          >
            <span
              className="list-container list-container--closed"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="none"
            >
              <button
                className="link ceJHnv edbLbi"
                href={null}
                role="button"
              >
                Link 5
              </button>
            </span>
            <span
              className="list-container list-container--closed"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="none"
            >
              <button
                className="link ceJHnv edbLbi"
                href={null}
                role="button"
              >
                Link 6
              </button>
            </span>
            <span
              className="list-container list-container--closed"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="none"
            >
              <button
                className="link ceJHnv edbLbi"
                href={null}
                role="button"
              >
                Link 7 With Really Long Content 
              </button>
            </span>
          </div>
        </div>
      </span>
    </div>
    <button
      className="egAjOF"
      type="button"
    >
      <svg
        fill="currentColor"
        height={21}
        viewBox="0 0 16 16"
        width={21}
      >
        <title>
          Search Icon
        </title>
        <path
          d="M11.491 6.048c0 .672-.135 1.31-.404 1.897a5.01 5.01 0 0 1-1.102 1.552 5.273 5.273 0 0 1-1.632 1.05 5.39 5.39 0 0 1-3.987 0 5.283 5.283 0 0 1-1.632-1.05 5.01 5.01 0 0 1-1.102-1.552 4.531 4.531 0 0 1-.404-1.897c0-.666.135-1.302.404-1.892.269-.592.64-1.114 1.102-1.552A5.304 5.304 0 0 1 4.366 1.56a5.207 5.207 0 0 1 1.994-.384c.706 0 1.376.13 1.993.384.62.256 1.17.607 1.632 1.045.462.438.833.96 1.102 1.552a4.54 4.54 0 0 1 .404 1.892m4.346 8.977l-4.744-4.93a6.36 6.36 0 0 0 .62-.774 5.913 5.913 0 0 0 .89-2.115 5.893 5.893 0 0 0-.004-2.346 5.543 5.543 0 0 0-.361-1.128 5.98 5.98 0 0 0-.588-1.036 6.49 6.49 0 0 0-.794-.925A6.37 6.37 0 0 0 8.794.461 6.82 6.82 0 0 0 7.61.116a6.742 6.742 0 0 0-2.5 0A6.82 6.82 0 0 0 3.925.46a6.44 6.44 0 0 0-2.064 1.313 6.491 6.491 0 0 0-.793.923 5.98 5.98 0 0 0-.588 1.036c-.16.361-.28.741-.36 1.128a5.954 5.954 0 0 0 0 2.376c.08.388.2.768.36 1.13a6.182 6.182 0 0 0 1.381 1.959c.298.288.624.544.97.764a6.44 6.44 0 0 0 2.279.894 6.77 6.77 0 0 0 3.363-.224 6.296 6.296 0 0 0 1.708-.873l4.749 4.925a.56.56 0 0 0 .215.145.701.701 0 0 0 .453.011.514.514 0 0 0 .2-.114.561.561 0 0 0 .039-.828"
        />
      </svg>
    </button>
    <button
      className="egAjOF"
      type="button"
    >
      <svg
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M24 0H0v24h24z"
          />
          <path
            d="M12 23C5.925 23 1 18.075 1 12S5.925 1 12 1s11 4.925 11 11-4.925 11-11 11zm0-1c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-8a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm0-1a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5 7.5a.5.5 0 1 1-1 0V19a6 6 0 1 1 12 0v1.5a.5.5 0 1 1-1 0V19a5 5 0 0 0-10 0v1.5z"
            fill="#262626"
            fillOpacity=".5"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </button>
    <button
      className="egAjOF"
      type="button"
    >
      Text Button!
    </button>
  </div>
</nav>
`;
